--- a/docs/docs-ref-autogen/excel/excel/excel.commentrichcontent.yml
+++ b/docs/docs-ref-autogen/excel/excel/excel.commentrichcontent.yml
@@ -2,9 +2,9 @@
 items:
   - uid: 'excel!Excel.CommentRichContent:interface'
     summary: |-
-      <span data-ttu-id="7648f-101">表示包含在批注或批注答复中的内容。</span><span class="sxs-lookup"><span data-stu-id="7648f-101">Represents the content contained within a comment or comment reply.</span></span> <span data-ttu-id="7648f-102">富内容 incudes 文本字符串和注释正文中包含的任何其他对象（如提及）。</span><span class="sxs-lookup"><span data-stu-id="7648f-102">Rich content incudes the text string and any other objects contained within the comment body, such as mentions.</span></span>
+      <span data-ttu-id="39fa3-101">表示包含在批注或批注答复中的内容。</span><span class="sxs-lookup"><span data-stu-id="39fa3-101">Represents the content contained within a comment or comment reply.</span></span> <span data-ttu-id="39fa3-102">富内容 incudes 文本字符串和注释正文中包含的任何其他对象（如提及）。</span><span class="sxs-lookup"><span data-stu-id="39fa3-102">Rich content incudes the text string and any other objects contained within the comment body, such as mentions.</span></span>
 
-      <span data-ttu-id="7648f-103">\[[API 集： EXCELAPI BETA （仅限预览）](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="7648f-103">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="39fa3-103">\[[API 集： EXCELAPI BETA （仅限预览）](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="39fa3-103">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     isPreview: true
     name: Excel.CommentRichContent
     fullName: Excel.CommentRichContent
@@ -17,9 +17,9 @@ items:
       - 'excel!Excel.CommentRichContent#richContent:member'
   - uid: 'excel!Excel.CommentRichContent#mentions:member'
     summary: |-
-      <span data-ttu-id="7648f-104">包含注释中提到的所有实体（例如，人员）的数组。</span><span class="sxs-lookup"><span data-stu-id="7648f-104">An array containing all the entities (e.g. people) mentioned within the comment.</span></span>
+      <span data-ttu-id="39fa3-104">包含注释中提到的所有实体（例如，人员）的数组。</span><span class="sxs-lookup"><span data-stu-id="39fa3-104">An array containing all the entities (e.g. people) mentioned within the comment.</span></span>
 
-      <span data-ttu-id="7648f-105">\[[API 集： EXCELAPI BETA （仅限预览）](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="7648f-105">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="39fa3-105">\[[API 集： EXCELAPI BETA （仅限预览）](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="39fa3-105">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     isPreview: true
     name: mentions
     fullName: mentions
@@ -31,6 +31,32 @@ items:
       return:
         type:
           - 'excel!Excel.CommentRichContent#mentions~0:complex'
+        description: |-
+
+
+          #### <a name="examples"></a><span data-ttu-id="39fa3-106">示例</span><span class="sxs-lookup"><span data-stu-id="39fa3-106">Examples</span></span>
+
+          ```typescript
+          await Excel.run(async (context) => {
+              const sheet = context.workbook.worksheets.getItem("Comments");
+              const mention = {
+                  email: "kakri@contoso.com",
+                  id: 0,
+                  name: "Kate Kristensen"
+              };
+
+              // This will tag the mention's name using the '@' syntax.
+              // They will be notified via email.
+              const commentBody = {
+                  mentions: [mention],
+                  richContent: '<at id="0">' + mention.name + "</at> -  Can you take a look?"
+              };
+
+              // Note that an InvalidArgument error will be thrown if multiple cells passed to `comment.add`.
+              sheet.comments.add("A1", commentBody, Excel.ContentType.mention);
+              await context.sync();
+          });
+          ```
   - uid: 'excel!Excel.CommentRichContent#richContent:member'
     isPreview: true
     name: richContent
