commit translated contents

--- a/docs/docs-ref-autogen/outlook/outlook/office.appointmentcompose.yml
+++ b/docs/docs-ref-autogen/outlook/outlook/office.appointmentcompose.yml
@@ -177,6 +177,8 @@ items:
 
       随后可以将该标识符与 removeAttachmentAsync 方法一起使用，以删除同一个会话中的附件。
 
+      **注意**：如果使用的是数据 url API （例如，readAsDataURL），则需要先去掉数据 url 前缀，然后再将字符串的其余部分发送到此 API。 例如，如果完整的字符串由`data:image/svg+xml;base64,<rest of base64 string>`<!-- -->，请删除`data:image/svg+xml;base64,`<!-- -->.
+
       \[[API 集：邮箱预览](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]
     remarks: |-
       **[最低权限级别](https://docs.microsoft.com/outlook/add-ins/understanding-outlook-add-in-permissions)<!-- -->**： ReadWriteItem
@@ -246,6 +248,8 @@ items:
       AddFileAttachmentFromBase64Async 方法从 base64 编码上载文件，并将其附加到撰写窗体中的项目。 此方法返回 asyncResult 对象中的附件标识符。
 
       随后可以将该标识符与 removeAttachmentAsync 方法一起使用，以删除同一个会话中的附件。
+
+      **注意**：如果使用的是数据 url API （例如，readAsDataURL），则需要先去掉数据 url 前缀，然后再将字符串的其余部分发送到此 API。 例如，如果完整的字符串由`data:image/svg+xml;base64,<rest of base64 string>`<!-- -->，请删除`data:image/svg+xml;base64,`<!-- -->.
 
       \[[API 集：邮箱预览](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]
     remarks: |-
