--- a/docs/docs-ref-autogen/outlook/outlook/office.sharedproperties.yml
+++ b/docs/docs-ref-autogen/outlook/outlook/office.sharedproperties.yml
@@ -52,6 +52,8 @@ items:
       目标/所有者的邮箱。 使用 with targetRestUrl 构造 REST 操作的 URL。
 
       示例用法：`targetRestUrl + "/{api_version}/users/" + targetMailbox + "/{REST_operation}"`
+
+      **注意**： URL 属性名称将从`restUrl`转换为`targetRestUrl`<!-- -->. 对于 web 上的 Outlook，请使用`targetRestUrl`<!-- -->. 对于 Windows 和 Mac，请使用`restUrl`<!-- -->.
     isPreview: true
     name: targetMailbox
     fullName: targetMailbox
@@ -68,6 +70,8 @@ items:
       REST API 的基 URL （当前https://outlook.office.com/api)为。 使用 with targetMailbox 构造 REST 操作的 URL。
 
       示例用法：`targetRestUrl + "/{api_version}/users/" + targetMailbox + "/{REST_operation}"`
+
+      **注意**：此属性名称将从`restUrl`转换为`targetRestUrl`<!-- -->. 对于 web 上的 Outlook，请使用`targetRestUrl`<!-- -->. 对于 Windows 和 Mac，请使用`restUrl`<!-- -->.
     isPreview: true
     name: targetRestUrl
     fullName: targetRestUrl
