commit bilingual contents

--- a/docs/docs-ref-autogen/excel/excel/excel.cellpropertiesfont.yml
+++ b/docs/docs-ref-autogen/excel/excel/excel.cellpropertiesfont.yml
@@ -2,9 +2,9 @@
 items:
   - uid: 'excel!Excel.CellPropertiesFont:interface'
     summary: |-
-      <span data-ttu-id="cbbf6-101">表示的`format.font`属性`getCellProperties`</span><span class="sxs-lookup"><span data-stu-id="cbbf6-101">Represents the `format.font` properties of `getCellProperties`</span></span><!-- --><span data-ttu-id="cbbf6-102">, `getRowProperties`</span><span class="sxs-lookup"><span data-stu-id="cbbf6-102"></span></span><!-- --><span data-ttu-id="cbbf6-103">，和`getColumnProperties`或的`format.font`输入参数`setCellProperties`</span><span class="sxs-lookup"><span data-stu-id="cbbf6-103">, and `getColumnProperties` or the `format.font` input parameter of `setCellProperties`</span></span><!-- --><span data-ttu-id="cbbf6-104">, `setRowProperties`</span><span class="sxs-lookup"><span data-stu-id="cbbf6-104"></span></span><!-- --><span data-ttu-id="cbbf6-105">，并`setColumnProperties`</span><span class="sxs-lookup"><span data-stu-id="cbbf6-105">, and `setColumnProperties`</span></span><!-- --><span data-ttu-id="cbbf6-106">.</span><span class="sxs-lookup"><span data-stu-id="cbbf6-106"></span></span>
+      <span data-ttu-id="f1137-101">表示的`format.font`属性`getCellProperties`</span><span class="sxs-lookup"><span data-stu-id="f1137-101">Represents the `format.font` properties of `getCellProperties`</span></span><!-- --><span data-ttu-id="f1137-102">, `getRowProperties`</span><span class="sxs-lookup"><span data-stu-id="f1137-102"></span></span><!-- --><span data-ttu-id="f1137-103">，和`getColumnProperties`或的`format.font`输入参数`setCellProperties`</span><span class="sxs-lookup"><span data-stu-id="f1137-103">, and `getColumnProperties` or the `format.font` input parameter of `setCellProperties`</span></span><!-- --><span data-ttu-id="f1137-104">, `setRowProperties`</span><span class="sxs-lookup"><span data-stu-id="f1137-104"></span></span><!-- --><span data-ttu-id="f1137-105">，并`setColumnProperties`</span><span class="sxs-lookup"><span data-stu-id="f1137-105">, and `setColumnProperties`</span></span><!-- --><span data-ttu-id="f1137-106">.</span><span class="sxs-lookup"><span data-stu-id="f1137-106"></span></span>
 
-      <span data-ttu-id="cbbf6-107">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="cbbf6-107">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="f1137-107">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="f1137-107">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: Excel.CellPropertiesFont
     fullName: Excel.CellPropertiesFont
     langs:
@@ -24,9 +24,9 @@ items:
       - 'excel!Excel.CellPropertiesFont#underline:member'
   - uid: 'excel!Excel.CellPropertiesFont#bold:member'
     summary: |-
-      <span data-ttu-id="cbbf6-108">表示`format.font.bold`属性。</span><span class="sxs-lookup"><span data-stu-id="cbbf6-108">Represents the `format.font.bold` property.</span></span>
+      <span data-ttu-id="f1137-108">表示`format.font.bold`属性。</span><span class="sxs-lookup"><span data-stu-id="f1137-108">Represents the `format.font.bold` property.</span></span>
 
-      <span data-ttu-id="cbbf6-109">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="cbbf6-109">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="f1137-109">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="f1137-109">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: bold
     fullName: bold
     langs:
@@ -39,9 +39,9 @@ items:
           - boolean
   - uid: 'excel!Excel.CellPropertiesFont#color:member'
     summary: |-
-      <span data-ttu-id="cbbf6-110">表示`format.font.color`属性。</span><span class="sxs-lookup"><span data-stu-id="cbbf6-110">Represents the `format.font.color` property.</span></span>
+      <span data-ttu-id="f1137-110">表示`format.font.color`属性。</span><span class="sxs-lookup"><span data-stu-id="f1137-110">Represents the `format.font.color` property.</span></span>
 
-      <span data-ttu-id="cbbf6-111">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="cbbf6-111">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="f1137-111">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="f1137-111">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: color
     fullName: color
     langs:
@@ -55,7 +55,7 @@ items:
         description: |-
 
 
-          #### <a name="examples"></a><span data-ttu-id="cbbf6-112">示例</span><span class="sxs-lookup"><span data-stu-id="cbbf6-112">Examples</span></span>
+          #### <a name="examples"></a><span data-ttu-id="f1137-112">示例</span><span class="sxs-lookup"><span data-stu-id="f1137-112">Examples</span></span>
 
           ```typescript
           await Excel.run(async (context) => {
@@ -65,6 +65,7 @@ items:
               // In your add-in, these should be created once, outside the function.
               const topHeaderProps: Excel.SettableCellProperties = {
                   // The style property takes a string matching the name of an Excel style.
+                  // Built-in style names are listed in the `BuiltInStyle` enum.
                   // Note that a style will overwrite any formatting,
                   // so do not use the format property with the style property.
                   style: "Heading1"
@@ -131,9 +132,9 @@ items:
           ```
   - uid: 'excel!Excel.CellPropertiesFont#italic:member'
     summary: |-
-      <span data-ttu-id="cbbf6-113">表示`format.font.italic`属性。</span><span class="sxs-lookup"><span data-stu-id="cbbf6-113">Represents the `format.font.italic` property.</span></span>
+      <span data-ttu-id="f1137-113">表示`format.font.italic`属性。</span><span class="sxs-lookup"><span data-stu-id="f1137-113">Represents the `format.font.italic` property.</span></span>
 
-      <span data-ttu-id="cbbf6-114">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="cbbf6-114">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="f1137-114">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="f1137-114">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: italic
     fullName: italic
     langs:
@@ -146,9 +147,9 @@ items:
           - boolean
   - uid: 'excel!Excel.CellPropertiesFont#name:member'
     summary: |-
-      <span data-ttu-id="cbbf6-115">表示`format.font.name`属性。</span><span class="sxs-lookup"><span data-stu-id="cbbf6-115">Represents the `format.font.name` property.</span></span>
+      <span data-ttu-id="f1137-115">表示`format.font.name`属性。</span><span class="sxs-lookup"><span data-stu-id="f1137-115">Represents the `format.font.name` property.</span></span>
 
-      <span data-ttu-id="cbbf6-116">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="cbbf6-116">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="f1137-116">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="f1137-116">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: name
     fullName: name
     langs:
@@ -161,9 +162,9 @@ items:
           - string
   - uid: 'excel!Excel.CellPropertiesFont#size:member'
     summary: |-
-      <span data-ttu-id="cbbf6-117">表示`format.font.size`属性。</span><span class="sxs-lookup"><span data-stu-id="cbbf6-117">Represents the `format.font.size` property.</span></span>
+      <span data-ttu-id="f1137-117">表示`format.font.size`属性。</span><span class="sxs-lookup"><span data-stu-id="f1137-117">Represents the `format.font.size` property.</span></span>
 
-      <span data-ttu-id="cbbf6-118">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="cbbf6-118">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="f1137-118">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="f1137-118">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: size
     fullName: size
     langs:
@@ -176,9 +177,9 @@ items:
           - number
   - uid: 'excel!Excel.CellPropertiesFont#strikethrough:member'
     summary: |-
-      <span data-ttu-id="cbbf6-119">表示`format.font.strikethrough`属性。</span><span class="sxs-lookup"><span data-stu-id="cbbf6-119">Represents the `format.font.strikethrough` property.</span></span>
+      <span data-ttu-id="f1137-119">表示`format.font.strikethrough`属性。</span><span class="sxs-lookup"><span data-stu-id="f1137-119">Represents the `format.font.strikethrough` property.</span></span>
 
-      <span data-ttu-id="cbbf6-120">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="cbbf6-120">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="f1137-120">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="f1137-120">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: strikethrough
     fullName: strikethrough
     langs:
@@ -191,9 +192,9 @@ items:
           - boolean
   - uid: 'excel!Excel.CellPropertiesFont#subscript:member'
     summary: |-
-      <span data-ttu-id="cbbf6-121">表示`format.font.subscript`属性。</span><span class="sxs-lookup"><span data-stu-id="cbbf6-121">Represents the `format.font.subscript` property.</span></span>
+      <span data-ttu-id="f1137-121">表示`format.font.subscript`属性。</span><span class="sxs-lookup"><span data-stu-id="f1137-121">Represents the `format.font.subscript` property.</span></span>
 
-      <span data-ttu-id="cbbf6-122">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="cbbf6-122">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="f1137-122">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="f1137-122">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: subscript
     fullName: subscript
     langs:
@@ -206,9 +207,9 @@ items:
           - boolean
   - uid: 'excel!Excel.CellPropertiesFont#superscript:member'
     summary: |-
-      <span data-ttu-id="cbbf6-123">表示`format.font.superscript`属性。</span><span class="sxs-lookup"><span data-stu-id="cbbf6-123">Represents the `format.font.superscript` property.</span></span>
+      <span data-ttu-id="f1137-123">表示`format.font.superscript`属性。</span><span class="sxs-lookup"><span data-stu-id="f1137-123">Represents the `format.font.superscript` property.</span></span>
 
-      <span data-ttu-id="cbbf6-124">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="cbbf6-124">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="f1137-124">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="f1137-124">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: superscript
     fullName: superscript
     langs:
@@ -221,9 +222,9 @@ items:
           - boolean
   - uid: 'excel!Excel.CellPropertiesFont#tintAndShade:member'
     summary: |-
-      <span data-ttu-id="cbbf6-125">表示`format.font.tintAndShade`属性。</span><span class="sxs-lookup"><span data-stu-id="cbbf6-125">Represents the `format.font.tintAndShade` property.</span></span>
+      <span data-ttu-id="f1137-125">表示`format.font.tintAndShade`属性。</span><span class="sxs-lookup"><span data-stu-id="f1137-125">Represents the `format.font.tintAndShade` property.</span></span>
 
-      <span data-ttu-id="cbbf6-126">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="cbbf6-126">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="f1137-126">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="f1137-126">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: tintAndShade
     fullName: tintAndShade
     langs:
@@ -236,9 +237,9 @@ items:
           - number
   - uid: 'excel!Excel.CellPropertiesFont#underline:member'
     summary: |-
-      <span data-ttu-id="cbbf6-127">表示`format.font.underline`属性。</span><span class="sxs-lookup"><span data-stu-id="cbbf6-127">Represents the `format.font.underline` property.</span></span>
+      <span data-ttu-id="f1137-127">表示`format.font.underline`属性。</span><span class="sxs-lookup"><span data-stu-id="f1137-127">Represents the `format.font.underline` property.</span></span>
 
-      <span data-ttu-id="cbbf6-128">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="cbbf6-128">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="f1137-128">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="f1137-128">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: underline
     fullName: underline
     langs:
