--- a/docs/docs-ref-autogen/excel/excel/excel.cellpropertiesfill.yml
+++ b/docs/docs-ref-autogen/excel/excel/excel.cellpropertiesfill.yml
@@ -2,9 +2,9 @@
 items:
   - uid: 'excel!Excel.CellPropertiesFill:interface'
     summary: |-
-      <span data-ttu-id="92495-101">表示的`format.fill`属性`getCellProperties`</span><span class="sxs-lookup"><span data-stu-id="92495-101">Represents the `format.fill` properties of `getCellProperties`</span></span><!-- --><span data-ttu-id="92495-102">, `getRowProperties`</span><span class="sxs-lookup"><span data-stu-id="92495-102"></span></span><!-- --><span data-ttu-id="92495-103">，和`getColumnProperties`或的`format.fill`输入参数`setCellProperties`</span><span class="sxs-lookup"><span data-stu-id="92495-103">, and `getColumnProperties` or the `format.fill` input parameter of `setCellProperties`</span></span><!-- --><span data-ttu-id="92495-104">, `setRowProperties`</span><span class="sxs-lookup"><span data-stu-id="92495-104"></span></span><!-- --><span data-ttu-id="92495-105">，并`setColumnProperties`</span><span class="sxs-lookup"><span data-stu-id="92495-105">, and `setColumnProperties`</span></span><!-- --><span data-ttu-id="92495-106">.</span><span class="sxs-lookup"><span data-stu-id="92495-106"></span></span>
+      <span data-ttu-id="68795-101">表示的`format.fill`属性`getCellProperties`</span><span class="sxs-lookup"><span data-stu-id="68795-101">Represents the `format.fill` properties of `getCellProperties`</span></span><!-- --><span data-ttu-id="68795-102">, `getRowProperties`</span><span class="sxs-lookup"><span data-stu-id="68795-102"></span></span><!-- --><span data-ttu-id="68795-103">，和`getColumnProperties`或的`format.fill`输入参数`setCellProperties`</span><span class="sxs-lookup"><span data-stu-id="68795-103">, and `getColumnProperties` or the `format.fill` input parameter of `setCellProperties`</span></span><!-- --><span data-ttu-id="68795-104">, `setRowProperties`</span><span class="sxs-lookup"><span data-stu-id="68795-104"></span></span><!-- --><span data-ttu-id="68795-105">，并`setColumnProperties`</span><span class="sxs-lookup"><span data-stu-id="68795-105">, and `setColumnProperties`</span></span><!-- --><span data-ttu-id="68795-106">.</span><span class="sxs-lookup"><span data-stu-id="68795-106"></span></span>
 
-      <span data-ttu-id="92495-107">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="92495-107">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="68795-107">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="68795-107">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: Excel.CellPropertiesFill
     fullName: Excel.CellPropertiesFill
     langs:
@@ -19,9 +19,9 @@ items:
       - 'excel!Excel.CellPropertiesFill#tintAndShade:member'
   - uid: 'excel!Excel.CellPropertiesFill#color:member'
     summary: |-
-      <span data-ttu-id="92495-108">表示`format.fill.color`属性。</span><span class="sxs-lookup"><span data-stu-id="92495-108">Represents the `format.fill.color` property.</span></span>
+      <span data-ttu-id="68795-108">表示`format.fill.color`属性。</span><span class="sxs-lookup"><span data-stu-id="68795-108">Represents the `format.fill.color` property.</span></span>
 
-      <span data-ttu-id="92495-109">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="92495-109">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="68795-109">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="68795-109">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: color
     fullName: color
     langs:
@@ -35,7 +35,7 @@ items:
         description: |-
 
 
-          #### <a name="examples"></a><span data-ttu-id="92495-110">示例</span><span class="sxs-lookup"><span data-stu-id="92495-110">Examples</span></span>
+          #### <a name="examples"></a><span data-ttu-id="68795-110">示例</span><span class="sxs-lookup"><span data-stu-id="68795-110">Examples</span></span>
 
           ```typescript
           await Excel.run(async (context) => {
@@ -45,6 +45,7 @@ items:
               // In your add-in, these should be created once, outside the function.
               const topHeaderProps: Excel.SettableCellProperties = {
                   // The style property takes a string matching the name of an Excel style.
+                  // Built-in style names are listed in the `BuiltInStyle` enum.
                   // Note that a style will overwrite any formatting,
                   // so do not use the format property with the style property.
                   style: "Heading1"
@@ -111,9 +112,9 @@ items:
           ```
   - uid: 'excel!Excel.CellPropertiesFill#pattern:member'
     summary: |-
-      <span data-ttu-id="92495-111">表示`format.fill.pattern`属性。</span><span class="sxs-lookup"><span data-stu-id="92495-111">Represents the `format.fill.pattern` property.</span></span>
+      <span data-ttu-id="68795-111">表示`format.fill.pattern`属性。</span><span class="sxs-lookup"><span data-stu-id="68795-111">Represents the `format.fill.pattern` property.</span></span>
 
-      <span data-ttu-id="92495-112">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="92495-112">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="68795-112">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="68795-112">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: pattern
     fullName: pattern
     langs:
@@ -126,9 +127,9 @@ items:
           - 'excel!Excel.CellPropertiesFill#pattern~0:complex'
   - uid: 'excel!Excel.CellPropertiesFill#patternColor:member'
     summary: |-
-      <span data-ttu-id="92495-113">表示`format.fill.patternColor`属性。</span><span class="sxs-lookup"><span data-stu-id="92495-113">Represents the `format.fill.patternColor` property.</span></span>
+      <span data-ttu-id="68795-113">表示`format.fill.patternColor`属性。</span><span class="sxs-lookup"><span data-stu-id="68795-113">Represents the `format.fill.patternColor` property.</span></span>
 
-      <span data-ttu-id="92495-114">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="92495-114">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="68795-114">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="68795-114">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: patternColor
     fullName: patternColor
     langs:
@@ -141,9 +142,9 @@ items:
           - string
   - uid: 'excel!Excel.CellPropertiesFill#patternTintAndShade:member'
     summary: |-
-      <span data-ttu-id="92495-115">表示`format.fill.patternTintAndShade`属性。</span><span class="sxs-lookup"><span data-stu-id="92495-115">Represents the `format.fill.patternTintAndShade` property.</span></span>
+      <span data-ttu-id="68795-115">表示`format.fill.patternTintAndShade`属性。</span><span class="sxs-lookup"><span data-stu-id="68795-115">Represents the `format.fill.patternTintAndShade` property.</span></span>
 
-      <span data-ttu-id="92495-116">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="92495-116">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="68795-116">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="68795-116">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: patternTintAndShade
     fullName: patternTintAndShade
     langs:
@@ -156,9 +157,9 @@ items:
           - number
   - uid: 'excel!Excel.CellPropertiesFill#tintAndShade:member'
     summary: |-
-      <span data-ttu-id="92495-117">表示`format.fill.tintAndShade`属性。</span><span class="sxs-lookup"><span data-stu-id="92495-117">Represents the `format.fill.tintAndShade` property.</span></span>
+      <span data-ttu-id="68795-117">表示`format.fill.tintAndShade`属性。</span><span class="sxs-lookup"><span data-stu-id="68795-117">Represents the `format.fill.tintAndShade` property.</span></span>
 
-      <span data-ttu-id="92495-118">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="92495-118">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="68795-118">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="68795-118">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: tintAndShade
     fullName: tintAndShade
     langs:
