--- a/docs/docs-ref-autogen/excel/excel/excel.settablecellproperties.yml
+++ b/docs/docs-ref-autogen/excel/excel/excel.settablecellproperties.yml
@@ -2,9 +2,9 @@
 items:
   - uid: 'excel!Excel.SettableCellProperties:interface'
     summary: |-
-      <span data-ttu-id="efb05-101">表示 setCellProperties 的输入参数。</span><span class="sxs-lookup"><span data-stu-id="efb05-101">Represents the input parameter of setCellProperties.</span></span>
+      <span data-ttu-id="b4695-101">表示 setCellProperties 的输入参数。</span><span class="sxs-lookup"><span data-stu-id="b4695-101">Represents the input parameter of setCellProperties.</span></span>
 
-      <span data-ttu-id="efb05-102">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="efb05-102">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="b4695-102">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="b4695-102">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: Excel.SettableCellProperties
     fullName: Excel.SettableCellProperties
     langs:
@@ -17,9 +17,9 @@ items:
       - 'excel!Excel.SettableCellProperties#style:member'
   - uid: 'excel!Excel.SettableCellProperties#format:member'
     summary: |-
-      <span data-ttu-id="efb05-103">表示`format`属性。</span><span class="sxs-lookup"><span data-stu-id="efb05-103">Represents the `format` property.</span></span>
+      <span data-ttu-id="b4695-103">表示`format`属性。</span><span class="sxs-lookup"><span data-stu-id="b4695-103">Represents the `format` property.</span></span>
 
-      <span data-ttu-id="efb05-104">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="efb05-104">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="b4695-104">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="b4695-104">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: format
     fullName: format
     langs:
@@ -32,9 +32,9 @@ items:
           - 'excel!Excel.CellPropertiesFormat:interface'
   - uid: 'excel!Excel.SettableCellProperties#hyperlink:member'
     summary: |-
-      <span data-ttu-id="efb05-105">表示`hyperlink`属性。</span><span class="sxs-lookup"><span data-stu-id="efb05-105">Represents the `hyperlink` property.</span></span>
+      <span data-ttu-id="b4695-105">表示`hyperlink`属性。</span><span class="sxs-lookup"><span data-stu-id="b4695-105">Represents the `hyperlink` property.</span></span>
 
-      <span data-ttu-id="efb05-106">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="efb05-106">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="b4695-106">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="b4695-106">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: hyperlink
     fullName: hyperlink
     langs:
@@ -47,9 +47,9 @@ items:
           - 'excel!Excel.RangeHyperlink:interface'
   - uid: 'excel!Excel.SettableCellProperties#style:member'
     summary: |-
-      <span data-ttu-id="efb05-107">表示`style`属性。</span><span class="sxs-lookup"><span data-stu-id="efb05-107">Represents the `style` property.</span></span>
+      <span data-ttu-id="b4695-107">表示`style`属性。</span><span class="sxs-lookup"><span data-stu-id="b4695-107">Represents the `style` property.</span></span>
 
-      <span data-ttu-id="efb05-108">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="efb05-108">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="b4695-108">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="b4695-108">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: style
     fullName: style
     langs:
@@ -63,7 +63,7 @@ items:
         description: |-
 
 
-          #### <a name="examples"></a><span data-ttu-id="efb05-109">示例</span><span class="sxs-lookup"><span data-stu-id="efb05-109">Examples</span></span>
+          #### <a name="examples"></a><span data-ttu-id="b4695-109">示例</span><span class="sxs-lookup"><span data-stu-id="b4695-109">Examples</span></span>
 
           ```typescript
           await Excel.run(async (context) => {
@@ -73,6 +73,7 @@ items:
               // In your add-in, these should be created once, outside the function.
               const topHeaderProps: Excel.SettableCellProperties = {
                   // The style property takes a string matching the name of an Excel style.
+                  // Built-in style names are listed in the `BuiltInStyle` enum.
                   // Note that a style will overwrite any formatting,
                   // so do not use the format property with the style property.
                   style: "Heading1"
