commit translated contents

--- a/docs/docs-ref-autogen/excel/excel/excel.worksheetcollection.yml
+++ b/docs/docs-ref-autogen/excel/excel/excel.worksheetcollection.yml
@@ -148,7 +148,6 @@ items:
       将工作簿的指定工作表插入当前工作簿。
 
       \[[API 集： EXCELAPI BETA （仅限预览）](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    isPreview: true
     name: 'addFromBase64(base64File, sheetNamesToInsert, positionTypeString, relativeTo)'
     fullName: 'addFromBase64(base64File, sheetNamesToInsert, positionTypeString, relativeTo)'
     langs:
@@ -566,7 +565,7 @@ items:
           - 'excel!Excel.WorksheetCollection#onChanged~0:complex'
   - uid: 'excel!Excel.WorksheetCollection#onColumnSorted:member'
     summary: |-
-      在对一个或多个列进行排序时发生。 从左到右排序操作的结果会发生这种情况。
+      在已对一个或多个列进行排序时发生。 这是从左到右排序操作的结果。
 
       \[[API 集： EXCELAPI BETA （仅限预览）](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     isPreview: true
@@ -673,7 +672,7 @@ items:
           - 'excel!Excel.WorksheetCollection#onRowHiddenChanged~0:complex'
   - uid: 'excel!Excel.WorksheetCollection#onRowSorted:member'
     summary: |-
-      对一个或多个行进行排序时发生。 这是从上到下排序操作的结果。
+      在已对一个或多个行进行排序时发生。 这是从上到下排序操作的结果。
 
       \[[API 集： EXCELAPI BETA （仅限预览）](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     isPreview: true
