--- a/docs/docs-ref-autogen/excel_1_9/excel/excel.range.yml
+++ b/docs/docs-ref-autogen/excel_1_9/excel/excel.range.yml
@@ -140,16 +140,16 @@ items:
           - string
   - uid: 'excel!Excel.Range#autoFill:member(1)'
     summary: |-
-      填充区域从当前区域到目标区域。 目标区域必须水平或垂直扩展源。 不支持不连续的区域。
+      使用指定的自动填充逻辑将范围从当前范围填充到目标区域。 目标区域可以是 null，也可以是水平或垂直扩展源。 如果目标区域为 null，则根据周围单元格（双击 UI 的区域填充句柄时的行为）填充数据。 有关详细信息，请参阅[使用自动填充和快速填充](https://support.office.com/article/video-use-autofill-and-flash-fill-2e79a709-c814-4b27-8bc2-c4dc84d49464)<!-- -->.
 
-      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+      \[[API 集： ExcelApi 1.9、ExcelApi Preview for null `destinationRange` ](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: 'autoFill(destinationRange, autoFillType)'
     fullName: 'autoFill(destinationRange, autoFillType)'
     langs:
       - typeScript
     type: method
     syntax:
-      content: 'autoFill(destinationRange: Range | string, autoFillType?: Excel.AutoFillType): void;'
+      content: 'autoFill(destinationRange?: Range | string, autoFillType?: Excel.AutoFillType): void;'
       return:
         type:
           - void
@@ -171,7 +171,7 @@ items:
           ```
       parameters:
         - id: destinationRange
-          description: 要自动填充的目标区域。
+          description: 要自动填充的目标区域。 不支持不连续的区域。
           type:
             - 'excel!Excel.Range#autoFill~0:complex'
         - id: autoFillType
@@ -180,23 +180,23 @@ items:
             - 'excel!Excel.AutoFillType:enum'
   - uid: 'excel!Excel.Range#autoFill:member(2)'
     summary: |-
-      填充区域从当前区域到目标区域。 目标区域必须水平或垂直扩展源。 不支持不连续的区域。
+      使用指定的自动填充逻辑将范围从当前范围填充到目标区域。 目标区域可以是 null，也可以是水平或垂直扩展源。 如果目标区域为 null，则根据周围单元格（双击 UI 的区域填充句柄时的行为）填充数据。 有关详细信息，请参阅[使用自动填充和快速填充](https://support.office.com/article/video-use-autofill-and-flash-fill-2e79a709-c814-4b27-8bc2-c4dc84d49464)<!-- -->.
 
-      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+      \[[API 集： ExcelApi 1.9、ExcelApi Preview for null `destinationRange` ](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: 'autoFill(destinationRange, autoFillTypeString)'
     fullName: 'autoFill(destinationRange, autoFillTypeString)'
     langs:
       - typeScript
     type: method
     syntax:
-      content: 'autoFill(destinationRange: Range | string, autoFillTypeString?: "FillDefault" | "FillCopy" | "FillSeries" | "FillFormats" | "FillValues" | "FillDays" | "FillWeekdays" | "FillMonths" | "FillYears" | "LinearTrend" | "GrowthTrend" | "FlashFill"): void;'
+      content: 'autoFill(destinationRange?: Range | string, autoFillTypeString?: "FillDefault" | "FillCopy" | "FillSeries" | "FillFormats" | "FillValues" | "FillDays" | "FillWeekdays" | "FillMonths" | "FillYears" | "LinearTrend" | "GrowthTrend" | "FlashFill"): void;'
       return:
         type:
           - void
         description: ''
       parameters:
         - id: destinationRange
-          description: 要自动填充的目标区域。
+          description: 要自动填充的目标区域。 不支持不连续的区域。
           type:
             - 'excel!Excel.Range#autoFill~1:complex'
         - id: autoFillTypeString
