--- a/docs/docs-ref-autogen/excel_1_9/excel/excel.requestcontext.yml
+++ b/docs/docs-ref-autogen/excel_1_9/excel/excel.requestcontext.yml
@@ -41,7 +41,7 @@ items:
         type:
           - 'excel!Excel.Application:class'
   - uid: 'excel!Excel.RequestContext#runtime:member'
-    summary: '\[[API 集： ExcelApi 1.5](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\] *'
+    summary: '\[[API 集： ExcelApi 1.5](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]'
     name: runtime
     fullName: runtime
     langs:
