--- a/docs/docs-ref-autogen/excel_1_9/excel/excel.requestcontext.yml
+++ b/docs/docs-ref-autogen/excel_1_9/excel/excel.requestcontext.yml
@@ -1,7 +1,7 @@
 ### YamlMime:UniversalReference
 items:
   - uid: 'excel!Excel.RequestContext:class'
-    summary: '<span data-ttu-id="b4a8d-101">RequestContext 对象可加快对 Excel 应用程序的请求。</span><span class="sxs-lookup"><span data-stu-id="b4a8d-101">The RequestContext object facilitates requests to the Excel application.</span></span> <span data-ttu-id="b4a8d-102">由于 Office 加载项和 Excel 应用程序在两个不同的进程中运行，因此请求上下文是从外接程序获取对 Excel 对象模型的访问权限所必需的。</span><span class="sxs-lookup"><span data-stu-id="b4a8d-102">Since the Office add-in and the Excel application run in two different processes, the request context is required to get access to the Excel object model from the add-in.</span></span>'
+    summary: RequestContext 对象可加快对 Excel 应用程序的请求。 由于 Office 加载项和 Excel 应用程序在两个不同的进程中运行，因此请求上下文是从外接程序获取对 Excel 对象模型的访问权限所必需的。
     name: Excel.RequestContext
     fullName: Excel.RequestContext
     langs:
@@ -16,7 +16,7 @@ items:
       - 'excel!Excel.RequestContext#runtime:member'
       - 'excel!Excel.RequestContext#workbook:member'
   - uid: 'excel!Excel.RequestContext:constructor(1)'
-    summary: <span data-ttu-id="b4a8d-103">构造`RequestContext`类的新实例</span><span class="sxs-lookup"><span data-stu-id="b4a8d-103">Constructs a new instance of the `RequestContext` class</span></span>
+    summary: 构造`RequestContext`类的新实例
     name: (constructor)(url)
     fullName: (constructor)(url)
     langs:
@@ -41,7 +41,7 @@ items:
         type:
           - 'excel!Excel.Application:class'
   - uid: 'excel!Excel.RequestContext#runtime:member'
-    summary: '<span data-ttu-id="b4a8d-104">\[[API 集： ExcelApi 1.5](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\] \*</span><span class="sxs-lookup"><span data-stu-id="b4a8d-104">\[ [API set: ExcelApi 1.5](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \] \*</span></span>'
+    summary: '\[[API 集： ExcelApi 1.5](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]'
     name: runtime
     fullName: runtime
     langs:
