commit translated contents

--- a/docs/docs-ref-autogen/excel/excel/excel.worksheet.yml
+++ b/docs/docs-ref-autogen/excel/excel/excel.worksheet.yml
@@ -203,7 +203,7 @@ items:
           - 'excel!Excel.RequestContext:class'
   - uid: 'excel!Excel.Worksheet#copy:member(1)'
     summary: |-
-      复制工作表并将其置于指定位置。 返回复制的工作表。
+      复制工作表并将其放在指定位置。
 
       \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: 'copy(positionType, relativeTo)'
@@ -217,7 +217,7 @@ items:
         type:
           - 'excel!Excel.Worksheet:class'
         description: |-
-
+          新创建的工作表。
 
           #### <a name="examples"></a>示例
 
@@ -238,16 +238,16 @@ items:
           ```
       parameters:
         - id: positionType
-          description: 可选。
+          description: 在工作簿中放置新创建的工作表的位置。 默认值为 "无"，这将在工作表的开头插入工作表。
           type:
             - 'excel!Excel.WorksheetPositionType:enum'
         - id: relativeTo
-          description: 可选。
+          description: 确定新创建的工作表位置的现有工作表。 仅当`positionType`为 "Before" 或 "After" 时才需要这样做。
           type:
             - 'excel!Excel.Worksheet:class'
   - uid: 'excel!Excel.Worksheet#copy:member(2)'
     summary: |-
-      复制工作表并将其置于指定位置。 返回复制的工作表。
+      复制工作表并将其放在指定位置。
 
       \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: 'copy(positionTypeString, relativeTo)'
@@ -260,14 +260,14 @@ items:
       return:
         type:
           - 'excel!Excel.Worksheet:class'
-        description: ''
+        description: 新创建的工作表。
       parameters:
         - id: positionTypeString
-          description: 可选。
+          description: 在工作簿中放置新创建的工作表的位置。 默认值为 "无"，这将在工作表的开头插入工作表。
           type:
             - '"None" | "Before" | "After" | "Beginning" | "End"'
         - id: relativeTo
-          description: 可选。
+          description: 确定新创建的工作表位置的现有工作表。 仅当`positionType`为 "Before" 或 "After" 时才需要这样做。
           type:
             - 'excel!Excel.Worksheet:class'
   - uid: 'excel!Excel.Worksheet#delete:member(1)'
@@ -1030,7 +1030,7 @@ items:
           ```
   - uid: 'excel!Excel.Worksheet#onColumnSorted:member'
     summary: |-
-      在对一个或多个列进行排序时发生。 从左到右排序操作的结果会发生这种情况。
+      在已对一个或多个列进行排序时发生。 这是从左到右排序操作的结果。
 
       \[[API 集： EXCELAPI BETA （仅限预览）](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     isPreview: true
@@ -1152,7 +1152,7 @@ items:
           - 'excel!Excel.Worksheet#onRowHiddenChanged~0:complex'
   - uid: 'excel!Excel.Worksheet#onRowSorted:member'
     summary: |-
-      对一个或多个行进行排序时发生。 这是从上到下排序操作的结果。
+      在已对一个或多个行进行排序时发生。 这是从上到下排序操作的结果。
 
       \[[API 集： EXCELAPI BETA （仅限预览）](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     isPreview: true
@@ -1472,7 +1472,29 @@ items:
       return:
         type:
           - void
-        description: ''
+        description: |-
+
+
+          #### <a name="examples"></a>示例
+
+          ```typescript
+          Excel.run(async (context) => {
+              const sheet = context.workbook.worksheets.getActiveWorksheet();
+
+              // This collapses the entire outline.
+              sheet.showOutlineLevels(1, 1);
+              await context.sync();
+          });
+          ```
+          ```typescript
+          Excel.run(async (context) => {
+              const sheet = context.workbook.worksheets.getActiveWorksheet();
+
+              // This shows the top 3 outline levels; collapsing any additional sublevels.
+              sheet.showOutlineLevels(3, 3);
+              await context.sync();
+          });
+          ```
       parameters:
         - id: rowLevels
           description: 要显示的分级显示的行级别数。
