--- a/docs/docs-ref-autogen/excel/toc.yml
+++ b/docs/docs-ref-autogen/excel/toc.yml
@@ -21,7 +21,7 @@ items:
               - name: Office 运行时
                 uid: office-runtime!
                 items:
-                  - name: Dialog
+                  - name: 对话框
                     uid: 'office-runtime!OfficeRuntime.Dialog:interface'
                   - name: DisplayWebDialogOptions
                     uid: 'office-runtime!OfficeRuntime.DisplayWebDialogOptions:interface'
@@ -112,6 +112,8 @@ items:
                 uid: 'excel!Excel.ChartPlotBy:enum'
               - name: ChartSeriesBy
                 uid: 'excel!Excel.ChartSeriesBy:enum'
+              - name: ChartSeriesDimension
+                uid: 'excel!Excel.ChartSeriesDimension:enum'
               - name: ChartSplitType
                 uid: 'excel!Excel.ChartSplitType:enum'
               - name: ChartTextHorizontalAlignment
@@ -503,7 +505,7 @@ items:
             uid: 'excel!Excel.ColumnProperties:interface'
           - name: ColumnPropertiesLoadOptions
             uid: 'excel!Excel.ColumnPropertiesLoadOptions:interface'
-          - name: Comment
+          - name: 评论
             uid: 'excel!Excel.Comment:class'
           - name: CommentCollection
             uid: 'excel!Excel.CommentCollection:class'
@@ -703,7 +705,7 @@ items:
             uid: 'excel!Excel.RowPropertiesLoadOptions:interface'
           - name: RunOptions
             uid: 'excel!Excel.RunOptions:interface'
-          - name: 语言
+          - name: 运行时
             uid: 'excel!Excel.Runtime:class'
           - name: SearchCriteria
             uid: 'excel!Excel.SearchCriteria:interface'
@@ -717,7 +719,7 @@ items:
             uid: 'excel!Excel.SettableColumnProperties:interface'
           - name: SettableRowProperties
             uid: 'excel!Excel.SettableRowProperties:interface'
-          - name: 设置
+          - name: Setting
             uid: 'excel!Excel.Setting:class'
           - name: SettingCollection
             uid: 'excel!Excel.SettingCollection:class'
@@ -803,7 +805,7 @@ items:
             uid: 'excel!Excel.TimelineStyleCollection:class'
           - name: TopBottomConditionalFormat
             uid: 'excel!Excel.TopBottomConditionalFormat:class'
-          - name: Workbook
+          - name: 工作簿
             uid: 'excel!Excel.Workbook:class'
           - name: WorkbookAutoSaveSettingChangedEventArgs
             uid: 'excel!Excel.WorkbookAutoSaveSettingChangedEventArgs:interface'
@@ -911,7 +913,7 @@ items:
                     uid: 'office!Office.AddinCommands.Event:interface'
                   - name: EventCompletedOptions
                     uid: 'office!Office.AddinCommands.EventCompletedOptions:interface'
-                  - name: Source
+                  - name: 源
                     uid: 'office!Office.AddinCommands.Source:interface'
               - name: AsyncContextOptions
                 uid: 'office!Office.AsyncContextOptions:interface'
@@ -941,15 +943,15 @@ items:
                 uid: 'office!Office.CustomXmlParts:interface'
               - name: CustomXmlPrefixMappings
                 uid: 'office!Office.CustomXmlPrefixMappings:interface'
-              - name: Dialog
+              - name: 对话框
                 uid: 'office!Office.Dialog:interface'
               - name: DialogOptions
                 uid: 'office!Office.DialogOptions:interface'
-              - name: Document
+              - name: 文档
                 uid: 'office!Office.Document:interface'
               - name: DocumentSelectionChangedEventArgs
                 uid: 'office!Office.DocumentSelectionChangedEventArgs:interface'
-              - name: 错误
+              - name: Error
                 uid: 'office!Office.Error:interface'
               - name: 文件
                 uid: 'office!Office.File:interface'
@@ -989,7 +991,7 @@ items:
                 uid: 'office!Office.SetBindingDataOptions:interface'
               - name: SetSelectedDataOptions
                 uid: 'office!Office.SetSelectedDataOptions:interface'
-              - name: 设置
+              - name: Settings
                 uid: 'office!Office.Settings:interface'
               - name: SettingsChangedEventArgs
                 uid: 'office!Office.SettingsChangedEventArgs:interface'
@@ -1017,7 +1019,7 @@ items:
                 uid: 'office!OfficeExtension.EmbeddedOptions:interface'
               - name: EmbeddedSession
                 uid: 'office!OfficeExtension.EmbeddedSession:class'
-              - name: 错误
+              - name: Error
                 uid: 'office!OfficeExtension.Error:class'
               - name: ErrorCodes
                 uid: 'office!OfficeExtension.ErrorCodes:class'
