commit translated contents

--- a/docs/docs-ref-autogen/office/office/office.eventtype.yml
+++ b/docs/docs-ref-autogen/office/office/office.eventtype.yml
@@ -61,8 +61,7 @@ items:
 
       事件处理程序接收一个类型为的参数`Office.AttachmentsChangedEventArgs`<!-- -->.
 
-      \[[API 集：邮箱预览](/office/dev/add-ins/reference/javascript-api-for-office)\]
-    isPreview: true
+      \[[API 集：邮箱 1.8](/office/dev/add-ins/reference/javascript-api-for-office)\]
     name: AttachmentsChanged
     fullName: AttachmentsChanged
     langs:
@@ -112,8 +111,7 @@ items:
 
       事件处理程序接收一个类型为的参数`Office.EnhancedLocationsChangedEventArgs`<!-- -->.
 
-      \[[API 集：邮箱预览](/office/dev/add-ins/reference/javascript-api-for-office)\]
-    isPreview: true
+      \[[API 集：邮箱 1.8](/office/dev/add-ins/reference/javascript-api-for-office)\]
     name: EnhancedLocationsChanged
     fullName: EnhancedLocationsChanged
     langs:
