--- a/docs/docs-ref-autogen/outlook/outlook/office.enhancedlocationschangedeventargs.yml
+++ b/docs/docs-ref-autogen/outlook/outlook/office.enhancedlocationschangedeventargs.yml
@@ -4,8 +4,7 @@ items:
     summary: |-
       在引发`Office.EventType.EnhancedLocationsChanged`事件时提供当前增强的位置。
 
-      \[[API 集：邮箱预览](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]
-    isPreview: true
+      \[[API 集：邮箱 1.8](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]
     name: Office.EnhancedLocationsChangedEventArgs
     fullName: Office.EnhancedLocationsChangedEventArgs
     langs:
@@ -19,8 +18,7 @@ items:
     summary: |-
       获取增强的位置集。
 
-      \[[API 集：邮箱预览](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]
-    isPreview: true
+      \[[API 集：邮箱 1.8](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]
     name: enhancedLocations
     fullName: enhancedLocations
     langs:
@@ -35,8 +33,7 @@ items:
     summary: |-
       获取事件的类型。 有关详细信息，请参阅 `Office.EventType`。
 
-      \[[API 集：邮箱预览](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]
-    isPreview: true
+      \[[API 集：邮箱 1.8](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]
     name: type
     fullName: type
     langs:
