--- a/docs/docs-ref-autogen/outlook/outlook/office.item.yml
+++ b/docs/docs-ref-autogen/outlook/outlook/office.item.yml
@@ -4,6 +4,10 @@ items:
     summary: |-
       Item 命名空间用于访问当前选定的邮件、会议请求或约会。 您可以通过使用`itemType`属性来确定项目的类型。
 
+      如果要仅查看特定类型的 IntelliSense，请将此项转换为以下项之一：
+
+      [ItemCompose](xref:outlook!Office.ItemCompose:interface)<!-- -->， [ItemRead](xref:outlook!Office.ItemRead:interface)<!-- -->， [MessageCompose](xref:outlook!Office.MessageCompose:interface)<!-- -->， [Messageread.html](xref:outlook!Office.MessageRead:interface)<!-- -->， [AppointmentCompose](xref:outlook!Office.AppointmentCompose:interface)<!-- -->， [AppointmentRead](xref:outlook!Office.AppointmentRead:interface)
+
       \[[API 集：邮箱 1.0](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]
     remarks: |-
       **[最低权限级别](https://docs.microsoft.com/outlook/add-ins/understanding-outlook-add-in-permissions)<!-- -->**：受限
@@ -36,7 +40,7 @@ items:
     summary: |-
       添加支持事件的事件处理程序。 **注意**：事件仅在任务窗格中可用。
 
-      目前，受支持的事件类型是`Office.EventType.AppointmentTimeChanged`<!-- -->, `Office.EventType.RecipientsChanged`<!-- -->，并`Office.EventType.RecurrenceChanged`<!-- -->. 在 "预览`Office.EventType.AttachmentsChanged` " `Office.EventType.EnhancedLocationsChanged`中，也支持。
+      若要查看受支持的事件类型， `Office.EventType`请参阅了解详细信息。
 
       \[[API 集：邮箱 1.7](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]
     remarks: |-
@@ -75,7 +79,7 @@ items:
     summary: |-
       添加支持事件的事件处理程序。 **注意**：事件仅在任务窗格中可用。
 
-      目前，受支持的事件类型是`Office.EventType.AppointmentTimeChanged`<!-- -->, `Office.EventType.RecipientsChanged`<!-- -->，并`Office.EventType.RecurrenceChanged`<!-- -->. 在 "预览`Office.EventType.AttachmentsChanged` " `Office.EventType.EnhancedLocationsChanged`中，也支持。
+      若要查看受支持的事件类型， `Office.EventType`请参阅了解详细信息。
 
       \[[API 集：邮箱 1.7](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]
     remarks: |-
@@ -162,7 +166,7 @@ items:
     summary: |-
       获取一个对象，该对象提供用于管理项的类别的方法。
 
-      \[[API 集：邮箱预览](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]
+      \[[API 集：邮箱 1.8](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]
     remarks: |-
       **[最低权限级别](https://docs.microsoft.com/outlook/add-ins/understanding-outlook-add-in-permissions)<!-- -->**： ReadItem
 
@@ -183,7 +187,6 @@ items:
           }
       });
       ```
-    isPreview: true
     name: categories
     fullName: categories
     langs:
@@ -198,9 +201,9 @@ items:
     summary: |-
       从邮件或约会中获取附件并将其作为**AttachmentContent**对象返回。
 
-      该`getAttachmentContentAsync`方法从项目中获取具有指定标识符的附件。 作为一种最佳做法，您应使用标识符在与`getAttachmentsAsync` or `item.attachments`调用一起检索到会话的同一会话中检索附件。 在 web 和移动设备上的 Outlook 中，附件标识符仅在同一个会话中有效。 当用户关闭应用程序时，或者如果用户开始撰写内嵌窗体，随后弹出窗体以继续在单独的窗口中。
+      该`getAttachmentContentAsync`方法从项目中获取具有指定标识符的附件。 作为一种最佳做法，您应使用标识符在与`getAttachmentsAsync` or `item.attachments`调用一起检索到会话的同一会话中检索附件。 在 Outlook 网页版和移动设备上，附件标识符只在同一个会话中才有效。 当用户关闭应用程序时，或者如果用户开始撰写内嵌窗体，随后弹出窗体以继续在单独的窗口中。
 
-      \[[API 集：邮箱预览](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]
+      \[[API 集：邮箱 1.8](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]
     remarks: |-
       **[最低权限级别](https://docs.microsoft.com/outlook/add-ins/understanding-outlook-add-in-permissions)<!-- -->**： ReadItem
 
@@ -246,7 +249,6 @@ items:
           }
       }
       ```
-    isPreview: true
     name: 'getAttachmentContentAsync(attachmentId, options, callback)'
     fullName: 'getAttachmentContentAsync(attachmentId, options, callback)'
     langs:
@@ -275,9 +277,9 @@ items:
     summary: |-
       从邮件或约会中获取附件并将其作为**AttachmentContent**对象返回。
 
-      该`getAttachmentContentAsync`方法从项目中获取具有指定标识符的附件。 作为一种最佳做法，您应使用标识符在与`getAttachmentsAsync` or `item.attachments`调用一起检索到会话的同一会话中检索附件。 在 web 和移动设备上的 Outlook 中，附件标识符仅在同一个会话中有效。 当用户关闭应用程序时，或者如果用户开始撰写内嵌窗体，随后弹出窗体以继续在单独的窗口中。
+      该`getAttachmentContentAsync`方法从项目中获取具有指定标识符的附件。 作为一种最佳做法，您应使用标识符在与`getAttachmentsAsync` or `item.attachments`调用一起检索到会话的同一会话中检索附件。 在 Outlook 网页版和移动设备上，附件标识符只在同一个会话中才有效。 当用户关闭应用程序时，或者如果用户开始撰写内嵌窗体，随后弹出窗体以继续在单独的窗口中。
 
-      \[[API 集：邮箱预览](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]
+      \[[API 集：邮箱 1.8](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]
     remarks: |-
       **[最低权限级别](https://docs.microsoft.com/outlook/add-ins/understanding-outlook-add-in-permissions)<!-- -->**： ReadItem
 
@@ -286,7 +288,6 @@ items:
       **错误**：
 
       - InvalidAttachmentId：附件标识符不存在。
-    isPreview: true
     name: 'getAttachmentContentAsync(attachmentId, callback)'
     fullName: 'getAttachmentContentAsync(attachmentId, callback)'
     langs:
@@ -397,12 +398,11 @@ items:
     summary: |-
       获取共享文件夹、日历或邮箱中的约会或邮件的属性。
 
-      \[[API 集：邮箱预览](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]
+      \[[API 集：邮箱 1.8](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]
     remarks: |-
       **[最低权限级别](https://docs.microsoft.com/outlook/add-ins/understanding-outlook-add-in-permissions)<!-- -->**： ReadItem
 
       **[适用的 Outlook 模式](https://docs.microsoft.com/outlook/add-ins/#extension-points)<!-- -->**：撰写或阅读
-    isPreview: true
     name: 'getSharedPropertiesAsync(options, callback)'
     fullName: 'getSharedPropertiesAsync(options, callback)'
     langs:
@@ -427,7 +427,7 @@ items:
     summary: |-
       获取共享文件夹、日历或邮箱中的约会或邮件的属性。
 
-      \[[API 集：邮箱预览](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]
+      \[[API 集：邮箱 1.8](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]
     remarks: |-
       **[最低权限级别](https://docs.microsoft.com/outlook/add-ins/understanding-outlook-add-in-permissions)<!-- -->**： ReadItem
 
@@ -443,7 +443,6 @@ items:
           var sharedProperties = asyncResult.value;
       }
       ```
-    isPreview: true
     name: getSharedPropertiesAsync(callback)
     fullName: getSharedPropertiesAsync(callback)
     langs:
@@ -589,7 +588,7 @@ items:
     summary: |-
       删除受支持事件类型的事件处理程序。 **注意**：事件仅在任务窗格中可用。
 
-      目前，受支持的事件类型是`Office.EventType.AppointmentTimeChanged`<!-- -->, `Office.EventType.RecipientsChanged`<!-- -->，并`Office.EventType.RecurrenceChanged`<!-- -->. 在 "预览`Office.EventType.AttachmentsChanged` " `Office.EventType.EnhancedLocationsChanged`中，也支持。
+      若要查看受支持的事件类型， `Office.EventType`请参阅了解详细信息。
 
       \[[API 集：邮箱 1.7](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]
     remarks: |-
@@ -624,7 +623,7 @@ items:
     summary: |-
       删除受支持事件类型的事件处理程序。 **注意**：事件仅在任务窗格中可用。
 
-      目前，受支持的事件类型是`Office.EventType.AppointmentTimeChanged`<!-- -->, `Office.EventType.RecipientsChanged`<!-- -->，并`Office.EventType.RecurrenceChanged`<!-- -->. 在 "预览`Office.EventType.AttachmentsChanged` " `Office.EventType.EnhancedLocationsChanged`中，也支持。
+      若要查看受支持的事件类型， `Office.EventType`请参阅了解详细信息。
 
       \[[API 集：邮箱 1.7](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]
     remarks: |-
