--- a/docs/docs-ref-autogen/outlook_1_6/outlook/office.message.yml
+++ b/docs/docs-ref-autogen/outlook_1_6/outlook/office.message.yml
@@ -2,7 +2,7 @@
 items:
   - uid: 'outlook!Office.Message:interface'
     summary: |-
-      邮件[的子类的子类](xref:outlook!Office.Item:interface)。
+      邮件的[项目](xref:outlook!Office.Item:interface)的子类。
 
       **重要说明**：这是一个内部 Outlook 对象，而不是直接通过现有接口公开。 应将其视为 "context.subname" 模式。 有关详细信息，请参阅[对象模型](https://docs.microsoft.com/office/dev/add-ins/reference/objectmodel/requirement-set-1.6/office.context.mailbox.item)页。
     name: Office.Message
